# GRRPit

./: .prettierignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Conduit.ts  EventState.ts  Settings.ts  util.ts
src/lib/apis/: FRCColors.ts  FRCEvents.ts  Nexus.ts  TBA.ts
src/lib/components/: Alliances.svelte  PlayoffBracket.svelte  Rankings.svelte  Schedule.svelte  Switch.svelte  Time.svelte  UpNext.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/playoffs/: +page.svelte
src/routes/practice/: +page.svelte
src/routes/qualifications/: +page.svelte
src/routes/settings/: +page.svelte
